fixed missaligned items in the step four summary

--- a/sass/components/_step-five.scss
+++ b/sass/components/_step-five.scss
@@ -1,6 +1,7 @@
+@use "../abstracts/media_queries" as mq;
+
 #step-five {
   display: none;
-  // display: grid;
   gap: 0.5rem;
   grid-template-rows: 60px min-content min-content;
   place-content: center;
@@ -8,13 +9,18 @@
   padding-inline-end: 3rem;
   height: 120%;
 
+  @include mq.media-sm {
+    margin-top: 5rem;
+    padding: 0;
+  }
+
   img {
     width: 50px;
     margin-bottom: 1rem;
   }
 
   p {
-    width: 50ch;
+    max-width: 50ch;
     line-height: 1.5;
     text-align: center;
   }
